# Sentinel-CLI

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  cli.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: sentinel-scan.yml
scripts/: validate_sarif.py
sentinel/: __init__.py  __main__.py  _cli.py  decision.py  main.py  models.py  pipeline.py
sentinel/data/: vulndb.json
sentinel/formatters/: __init__.py  human.py  json_formatter.py  sarif.py
sentinel/scanner/: __init__.py  dast_scanner.py  dependency_scanner.py  engine.py  file_discovery.py  secrets_scanner.py  static_analysis.py
test_repo/: app.py  config.py  requirements.txt  vulnerable_deps.txt
test_repos/vulnerable-deps/: requirements.txt  vulnerable_deps.txt
test_servers/: vulnerable_server.py
tests/: test_cli.py  test_dast_scanner.py  test_decision.py  test_dependency_scanner.py  test_end_to_end.py  test_engine.py  test_file_discovery.py  test_sarif_formatter.py  test_secrets_scanner.py  test_static_analysis.py
