[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-security"
version = "0.2.0"
description = "Local-first, deterministic security scanner for Git repositories and web applications"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
keywords = ["security", "scanner", "sast", "dast", "owasp", "ci-cd"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
]

dependencies = [
    "pathspec>=0.10.0",
    "packaging>=21.0",
    "tqdm>=4.60.0",
]

[project.urls]
Homepage = "https://github.com/sentinel-security/sentinel"
Repository = "https://github.com/sentinel-security/sentinel"
Documentation = "https://github.com/sentinel-security/sentinel#readme"

[project.scripts]
sentinel = "sentinel.main:main"

[tool.setuptools.packages.find]
include = ["sentinel*"]

[tool.setuptools.package-data]
sentinel = ["data/*.json"]
